# python-librenmsapi

./: .gitignore  CHANGELOG.md  Makefile  README.md  generate.py  librenmsapi.j2  librenmsapi.py  pyproject.toml
docs/: get_device.json
examples/: README.md  extract_location_from_hostname.py  list_devices_all.py  list_links.py  normalise_hostname.py  parents_by_lldp.py
tests/: Makefile  README  conftest.bak  tests.py
